데이터분석 팀 사진 업데이트

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body {
   background-image: url('./img/slimestory.png');
 }
 .port3 {
-  background-image: url('./img/.png');
+  background-image: url('./img/data2.png');
 }
 .port-title {
   color: #dadfee;
